# WeCase

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  ChangeLog  DRAFT.md  Makefile.am  Makefile.in  NEWS  README.md  ROADMAP  aclocal.m4  bootstrap.sh  configure  configure.ac  py-compile  release.sh
Source code/: wecase.py
Source code/UI/: MainWindow.ui
doc/: README
locale/: Makefile.am  Makefile.in  WeCase_zh_CN.qm  WeCase_zh_CN.ts
m4/: AC_PYTHON_MODULE.m4  acx.m4  pyqt4.m4
meetings/: meeting.py
meetings/01/: log  results  todo
pages/: index.html
pages/css/: reset.css  style.css
pages/images/: Thumbs.db  cursor_full.cur  cursor_min.cur
pages/images/background/: Thumbs.db
pages/images/foreground/: Thumbs.db
pages/images/thumbs/: Thumbs.db
pages/js/: jquery.template.js  jquery.template.min.js
res/: Makefile.am  Makefile.in  wecase.desktop.in
res/img/face/: face.xml
res/img/smiley/L1/: fuyun_thumb  geili_thumb  hufen_thumb  rabbit_thumb  vw_thumb
res/img/smiley/L2/: bz_thumb  kbsa_thumb  shamea_thumb  tootha_thumb  tza_thumb  zy_thumb
res/img/smiley/L3/: heia_thumb  sb_thumb
res/img/smiley/L4/: cza_thumb  k_thumb  sleepa_thumb  sw_thumb
res/img/smiley/L5/: bs_thumb  gza_thumb  yx_thumb
res/img/smiley/L6/: cake  lazu_thumb
res/ui/: AboutWindow.ui  ButtonImage.qml  LoginWindow.ui  MainWindow.ui  NewpostWindow.ui  SettingWindow.ui  SmileyDelegate.qml  SmileyWindow.ui  TweetDelegate.qml  TweetList.qml  wecase.qrc
sdk/: 0001-update.patch
src/: AboutWindow.py  AboutWindow_ui.py  AsyncFetcher.py  Face.py  FaceWidget.py  FaceWindow.py  FaceWindow_ui.py  FilterTable.py  LoginInfo.py  LoginWindow.py  LoginWindow_ui.py  MainWindow_ui.py  Makefile  Makefile.am  Makefile.in  NewpostWindow.py  NewpostWindow_ui.py  Notify.py  SettingWindow.py  SettingWindow_ui.py  SimpleLabel.py  Smiley.py  SmileyWidget.py  SmileyWindow.py  SmileyWindow_ui.py  Tweet.py  TweetListWidget.py  TweetUtils.py  TweetUtils_test.py  WAsyncLabel.py  WAvatarLabel.py  WCompleteLineEdit.py  WConfigParser.py  WFileCache.py  WIconLabel.py  WImageLabel.py  WMetaConfig  WMovie.py  WObjectCache.py  WRotatingLabel.py  (+27 more)
src/weibos/: client.py  helper.py
ui/: AboutWindow.ui  BusyIndicator.qml  ImageLoader.qml  JavaScript.qml  LoginWindow.ui  MainWindow.ui  MentionsWindow.ui  NewpostWindow.ui  SettingWindow.ui  ShowPic.qml  SmileyDelegate.qml  SmileyModel.qml  SmileyView.qml  SmileyWindow.ui  TweetDelegate.qml  TweetList.qml  wecase.desktop  wecase.qrc
ui/img/smiley/L1/: horse2_thumb  liwu_thumb  otm_thumb  panda_thumb  shenshou_thumb  wg_thumb
ui/img/smiley/L2/: bs2_thumb  cj_thumb  kl_thumb  lovea_thumb
ui/img/smiley/L3/: ldln_thumb  mb_thumb  qq_thumb  wq_thumb  yhh_thumb  zhh_thumb
ui/img/smiley/L4/: 88_thumb  bba_thumb  sk_thumb  yw_thumb
ui/img/smiley/L5/: crazya_thumb  h_thumb  hsa_thumb  nm_thumb  unheart
ui/img/smiley/L6/: m_thumb  no_thumb  pig
utils/: debug.py  scandep.sh
